# libnbf

./: .gitignore  CMakeLists.txt  basic.cmake  libbdf.vcxproj  libbdf.vcxproj.filters  libnbf.sln  libnbf.vcxproj  libnbf.vcxproj.filters
doc/: framework design.docx  server&&client.vsd
examples/: CMakeLists.txt  README.txt
examples/coroutine_stress_testing/: CMakeLists.txt
examples/coroutine_stress_testing/conf/: logger_cli.conf  logger_svr.conf  router.conf  stress_testing_client.conf  stress_testing_server.conf
examples/coroutine_stress_testing/src/: client_task_test.cpp  client_task_test.h  coro_client_main.cpp  coro_server_main.cpp  coro_test_server_handle.cpp  coro_test_server_handle.h
examples/coroutine_test_server/: CMakeLists.txt
examples/coroutine_test_server/conf/: coroutine_test_server.conf  logger.conf  router.conf
examples/coroutine_test_server/src/: app_test_server_handle.cpp  app_test_server_handle.h  test_main.cpp
examples/python/: http_client.py  rapid_client.py
examples/test_client_server/: CMakeLists.txt
examples/test_client_server/conf/: logger.conf  router.conf  test_client_server.conf
examples/test_client_server/src/: test_client_server_handle.cpp  test_client_server_handle.h  test_main.cpp
examples/test_server/: CMakeLists.txt
examples/test_server/conf/: logger.conf  test_server.conf
examples/test_server/src/: test_main.cpp  test_server_handle.cpp  test_server_handle.h
src/: CMakeLists.txt  context.h  handle.h  handle_data.h  message.h  message_base.cpp  message_base.h  task.h
src/agents/: agent_master.cpp  agent_master.h  agent_slave.cpp  agent_slave.h  agents.cpp  agents.h  slave_service_data_run.cpp  slave_service_data_run.h
src/app/: app.h  app_cmd_parser.cpp  app_cmd_parser.h  appbase.cpp  appbase.h  config_info.cpp  config_info.h
src/client/: client.cpp  client.h  client_mgr.cpp  client_mgr.h  client_router.cpp  client_router.h  client_routers.cpp  client_routers.h
src/common/: buffer.cpp  buffer.h  common.h  heap.h  ini_files.cpp  ini_files.h  lockfree_ringbuffer.h  logger.h  spin_lock.h  string_util.cpp  string_util.h  thread_id.h  time.h  timer_mgr.cpp  timer_mgr.h
src/coroutine/: coro_context.h  coroutine.h  coroutine_actor.cpp  coroutine_actor.h  coroutine_context.cpp  coroutine_context.h  coroutine_impl.cpp  coroutine_impl.h  coroutine_manager.cpp  coroutine_manager.h  coroutine_release.h  coroutine_schedule.cpp  coroutine_schedule.h
src/coroutine/coroutine_impl_c/: coro_context_c.h  coroutine_actor_c.cpp  coroutine_actor_c.h  coroutine_impl_c.cpp  coroutine_impl_c.h
src/event/: event_data.cpp  event_data.h  event_driver.cpp  event_driver.h  event_loop_thread.cpp  event_loop_thread.h  event_notifier.cpp  event_notifier.h  thread_data_run.h
src/event/timer/: timer.cpp  timer.h  timer_base.h
src/monitor/: matrix.cpp  matrix.h  matrix_collector.cpp  matrix_collector.h  matrix_item.cpp  matrix_item.h  matrix_item_map.cpp  matrix_item_map.h  matrix_scope.h  matrix_stat.cpp  matrix_stat.h  matrix_stat_map.cpp  matrix_stat_map.h  mem_profile.h
src/monitor/test/: CMakeLists.txt  t_matrix.cpp  t_matrix_stat.cpp  t_mem_profile.cpp  t_struct.h
src/monitor/test/conf/: test.conf
src/net/: async_client_connect.cpp  async_client_connect.h  async_sequence.cpp  async_sequence.h  client_connect.cpp  client_connect.h  client_reconnect_thread.cpp  client_reconnect_thread.h  connect.cpp  connect.h  connect_manager.cpp  connect_manager.h  io_handle.cpp  io_handle.h  server_connect.cpp  server_connect.h  socket.cpp  socket.h  sync_client_connect.cpp  sync_client_connect.h  sync_sequence.cpp  sync_sequence.h
src/net_thread_mgr/: acceptor_thread.cpp  acceptor_thread.h  io_thread_data_run.cpp  io_thread_data_run.h  io_threads.cpp  io_threads.h  net_thread_mgr.cpp  net_thread_mgr.h
src/protocol/: protocol_base.cpp  protocol_base.h  protocol_helper.h
src/protocol/http/: http_helper.cpp  http_helper.h  http_info.h  http_protocol.cpp  http_protocol.h  http_util.cpp  http_util.h
src/protocol/rapid/: rapid_protocol.cpp  rapid_protocol.h
src/protocol/redis/: redis_parser.cpp  redis_parser.h  redis_protocol.cpp  redis_protocol.h
src/service/: coroutine_service_handle.cpp  coroutine_service_handle.h  io_service.cpp  io_service.h  service_handle.cpp  service_handle.h  service_manager.cpp  service_manager.h
src/tester/: CMakeLists.txt  t_timer.cpp
